# discord-memleak-notifier

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
src/: constants.rs  main.rs  util.rs
