[package]
name = "discord-memleak-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
sysinfo = "0.38.4"
tokio = { version = "1.52.0", features = ["time", "rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.12"
